# mikro-napari

./: 404.html  README.md  Tests.token.temp  index.html  logs.txt  napari.fakts.yaml  napari.yaml  pyproject.toml  querk.yaml  run.py  sitemap.xml
.github/workflows/: docker-master.yaml
assets/js/: 0e384e19.381781e5.js  2ada48b4.e75d0eaa.js  38faef72.bdd8a306.js  393be207.98e49de5.js  55651495.56dbe1fd.js  59362658.43f8badf.js  5ab2344a.15de15bd.js  5efa2d21.0f5bf923.js  69d32d2f.12818560.js  747bc720.8f4ab87c.js  77b16a6b.28d56e16.js  7ed5b3d4.399d7a06.js  814f3328.328d950e.js  935f2afb.ea40d30e.js  f4f34a3a.15fe7be3.js  main.293bb6e1.js  runtime~main.7ccd94fc.js
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/tags/rath/: index.html
docs/intro/: index.html
docs/reference/plugin/: index.html
docs/reference/run/: index.html
graphql/fragments/: representation.graphql
graphql/queries/: acquisition.graphql  representation.graphql  roi.graphql
markdown-page/: index.html
mikro_napari/: __init__.py  global_app.py  plugin.py  run.py
mikro_napari/api/: schema.py  structures.py
mikro_napari/helpers/: stage.py
mikro_napari/models/: representation.py
mikro_napari/widgets/: main_widget.py
mikro_napari/widgets/sidebar/: sidebar.py
mikro_napari/widgets/table/: table_widget.py
tests/: test_integration.py  test_non_interference.py
